--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -4,4 +4,6 @@ excerpt: "Course starting on March 2024, for students of the Jagiellonian Univer
 collection: teaching
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+The first edition of the Advanced Toolkit for Bioinformatics Research will start in the winter term of 2024. The course is dedicated to students for the last year of the BS.C. in Bioinformatics, but students of other master studies might take it too.
+
+Necessary basic knowledge of programming in Python and/or R.
