--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -1,6 +1,7 @@
 ---
 title: "Advanced Toolkit for Bioinformatics Research"
 excerpt: "Course starting on March 2024, for students of the Jagiellonian University."
+date: February 2023
 collection: teaching
 ---
 
