--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -1,7 +1,7 @@
 ---
 title: "Advanced Toolkit for Bioinformatics Research"
-excerpt: "Course starting on March 2024, for students of the Jagiellonian University."
-date: February 2023
+excerpt: "Summer semester (February - June) for students of the Jagiellonian University."
+date: 2023/02/27
 collection: teaching
 ---
 
