--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -2,6 +2,7 @@
 title: "Advanced Toolkit for Bioinformatics Research"
 excerpt: "Summer semester (February - June) for students of the Jagiellonian University."
 date: 2023/02/27
+venue: Jagiellonian University
 collection: teaching
 ---
 
