--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -1,5 +1,5 @@
 ---
-title: "Advanced Toolkit for Bioinformatics Research"
+title: "AT4BR - Advanced Toolkit for Bioinformatics Research"
 excerpt: "Summer semester (February - June) for students of the Jagiellonian University."
 date: 2023/02/27
 venue: Jagiellonian University
