--- a/_teaching/teaching-1.html
+++ b/_teaching/teaching-1.html
@@ -6,6 +6,6 @@ venue: Jagiellonian University
 collection: teaching
 ---
 
-The first edition of the Advanced Toolkit for Bioinformatics Research will start in the winter term of 2024. The course is dedicated to students for the last year of the BS.C. in Bioinformatics, but students of other master studies might take it too.
+ The course is dedicated to students of the B.Sc. in Bioinformatics, but students of  M.Sc. in Bioinformatics and other master studies with programming background might take it too.
 
 Necessary basic knowledge of programming in Python and/or R.
